examples/canary-ab/canary-ing.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: canary-ing
  annotations:
    ingress.kubernetes.io/proxy-body-size: 100M
    kubernetes.io/ingress.class: nginx
    ingress.kubernetes.io/app-root: /
spec:
  rules:
  - host: canary.demo.argoproj.io
    http:
      paths:
      - path: /
        backend:
          serviceName: canary-demo
          servicePort: 80
